--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = ('I',)"
    ]
   },
   {
@@ -33,11 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(tup)\n"
    ]
   },
   {
@@ -55,13 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "#las tuplas son inmutables\n"
    ]
   },
   {
@@ -79,13 +86,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "tup = tup + (\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup"
    ]
   },
   {
@@ -103,11 +128,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup1 = tup[0:4]\n",
+    "tup2 = tup[-4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup1 = ('I', 'r', 'o', 'n') and tup2 = ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'tup1 = {tup1} and tup2 = {tup2}')"
    ]
   },
   {
@@ -121,11 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup3 = tup1 + tup2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'tup3 = {tup3}')"
    ]
   },
   {
@@ -137,11 +197,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup1 has 4 elemnts and the tup2 has 4 elements\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "len1 = len(tup1)\n",
+    "len2 = len(tup2)\n",
+    "print(f'tup1 has {len1} elemnts and the tup2 has {len2} elements')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup1 + tup2 = 8, tup3 has 8 elements\n"
+     ]
+    }
+   ],
+   "source": [
+    "lentot = len1 + len2\n",
+    "len3 = len(tup3)\n",
+    "print(f'tup1 + tup2 = {lentot}, tup3 has {len3} elements')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len3 - lentot"
    ]
   },
   {
@@ -153,11 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3.index('h')"
    ]
   },
   {
@@ -177,11 +297,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is in tup3\n",
+      "b is not in tup3\n",
+      "c is in tup3\n",
+      "d is not in tup3\n",
+      "e is not in tup3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in letters:\n",
+    "    if l in tup3:\n",
+    "        print(f'{l} is in tup3')\n",
+    "    else:\n",
+    "        print(f'{l} is not in tup3')"
    ]
   },
   {
@@ -195,12 +340,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a appears 1 times in tup3\n",
+      "b appears 0 times in tup3\n",
+      "c appears 1 times in tup3\n",
+      "d appears 0 times in tup3\n",
+      "e appears 0 times in tup3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in letters:\n",
+    "    \n",
+    "    num = tup3.count(l)\n",
+    "    print(f'{l} appears {num} times in tup3')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
